test/policies/subfolder/disallow-kube-system-namespace.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-kube-system-namespace
spec:
  rules:
    - name: validate-namespace
      match:
        any:
          - resources:
              kinds: [ConfigMap]
      validate:
        failureAction: Enforce
        message: Using 'kube-system' namespace is not allowed.
        pattern:
          metadata:
            namespace: "!kube-system"
